--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# public assets
+assets/public/**/*
+
+# distributed source
+dist/**/*
+
 # Logs
 logs
 *.log
@@ -80,13 +86,11 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
-# public
 
 # vuepress build output
 .vuepress/dist
@@ -102,3 +106,8 @@ dist
 
 # TernJS port file
 .tern-port
+
+*.DS_Store
+
+# IDE metadata
+.idea
