--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:server": "tsc && cp -r src/views dist/ && cp -r src/config dist/",
     "build:assets": "gulp build",
-    "build": "npm run build:assets && npm run build:server",
+    "build": "rm -rf ./dist && npm run build:assets && npm run build:server",
     "lint": "eslint 'src/*.ts' 'src/**/*.ts' 'test/src/**/*.ts'",
     "lint:fix": "eslint 'src/*.ts' 'src/**/*.ts' 'test/src/**/*.ts' --fix",
     "coverage": "nyc --check-coverage --reporter=text-summary npm run test",
