--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:server": "tsc && cp -r src/views dist/ && cp -r src/config dist/",
     "build:assets": "gulp build",
-    "build": "rm -rf ./dist && npm run build:assets && npm run build:server",
+    "build": "npm run build:assets && npm run build:server",
     "lint": "eslint 'src/*.ts' 'src/**/*.ts' 'test/src/**/*.ts'",
     "lint:fix": "eslint 'src/*.ts' 'src/**/*.ts' 'test/src/**/*.ts' --fix",
     "coverage": "nyc --check-coverage --reporter=text-summary npm run test",
@@ -14,7 +14,8 @@
     "test:coverage": "nyc npm test",
     "test": "mocha --recursive test/src/**/*.ts",
     "start": "npm run build && source ./dist/config/.env && node dist/server.js",
-    "start:watch": "nodemon"
+    "start:watch": "nodemon",
+    "debug-run": "NODE_ENV=development node -r ts-node/register/transpile-only --inspect=0.0.0.0 src/app.ts"
   },
   "husky": {
     "hooks": {
