--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "mocha --recursive test/src/**/*.ts",
     "start": "npm run build && source ./dist/config/.env && node dist/server.js",
     "start:watch": "nodemon",
-    "debug-run": "NODE_ENV=development node -r ts-node/register/transpile-only --inspect=0.0.0.0 src/app.ts"
+    "debug-run": "NODE_ENV=development node -r ts-node/register/transpile-only --inspect=0.0.0.0 src/app.ts",
+    "dev": "nodemon --watch src --ignore 'src/*/.test.ts' --ext ts --exec 'NODE_OPTIONS=\"--inspect=0.0.0.0\" ts-node ./src/server.ts'"
   },
   "husky": {
     "hooks": {
@@ -47,6 +48,7 @@
     "yargs": "15.3.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.51",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "7.1.2",
     "@types/chai-http": "4.2.0",
@@ -89,7 +91,7 @@
     "sass": "^1.59.2",
     "sinon": "9.0.2",
     "sinon-chai": "3.5.0",
-    "ts-node": "8.10.1",
+    "ts-node": "^8.10.1",
     "typescript": "4.9.5"
   },
   "overrides": {
