--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:16
 ARG SSH_KEY
 ENV SSH_KEY=$SSH_KEY
 # Make ssh dir
@@ -16,5 +16,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD [ "npm", "run", "dev" ]
+#RUN /bin/bash -c "source
+#RUN ["/bin/bash", "-c", "'npm run start'"]
+CMD [ "npm", "run", "start:watch" ]
 # ENTRYPOINT [ "bash" ]
