--- a/src/config/.env
+++ b/src/config/.env
@@ -1,22 +1,31 @@
 #!bin/bash
 
-export APP_NAME=psc-filing-web
-export LOG_LEVEL=info
-
-export NODE_ENV=dev
-export NODE_PORT=8090
-
-export NODE_HOSTNAME=example.com
-export NODE_HOSTNAME_SECURE=secure.example.com
-export NODE_BASE_URL="http://example.com"
-export NODE_BASE_URL_SECURE="https://secure.example.com"
-
-export NUNJUCKS_LOADER_WATCH=false
-export NUNJUCKS_LOADER_NO_CACHE=true
+export ACCOUNT_URL=${ACCOUNT_URL}
+export API_URL=${API_URL}
+export CACHE_SERVER=${CACHE_SERVER}
+export CHS_API_KEY=${CHS_API_KEY}
+export COOKIE_DOMAIN=${COOKIE_DOMAIN}
+export COOKIE_NAME=${COOKIE_NAME}
+export COOKIE_SECRET=${COOKIE_SECRET}
+export EWF_URL=${EWF_URL}
+export INTERNAL_API_URL=${INTERNAL_API_URL}
+export LOG_LEVEL=${LOG_LEVEL}
+export PIWIK_SITE_ID=${PIWIK_SITE_ID}
+export PIWIK_START_GOAL_ID=${PIWIK_START_GOAL_ID}
+export PIWIK_URL=${PIWIK_URL}
+export RADIO_BUTTON_VALUE_LOG_LENGTH=${RADIO_BUTTON_VALUE_LOG_LENGTH}
+export SHOW_SERVICE_OFFLINE_PAGE=${SHOW_SERVICE_OFFLINE_PAGE}
+export URL_LOG_MAX_LENGTH=${URL_LOG_MAX_LENGTH}
+export URL_PARAM_MAX_LENGTH=${URL_PARAM_MAX_LENGTH}
+export APP_NAME=${APP_NAME}
+export NODE_PORT=${NODE_PORT}
+export NODE_ENV=${NODE_ENV}
+export NUNJUCKS_LOADER_WATCH=${NUNJUCKS_LOADER_WATCH}
+export NUNJUCKS_LOADER_NO_CACHE=${NUNJUCKS_LOADER_NO_CACHE}
 
 ## The CDN_HOST value should be a production value used to access static assets not available in your local env e.g. vendor specific libraries (like jQuery)
 ## Leave it empty if you want to access locally built assets
-export CDN_HOST=//drv45oe4qnhl0.cloudfront.net ## Check with Platform Team or DevOps for most up-to-date value
-export CDN_URL_CSS=/css
-export CDN_URL_JS=/js
-export CHS_URL=
+export CDN_HOST=${CHS_URL}
+export CDN_URL_CSS=${CDN_URL_CSS}
+export CDN_URL_JS=${CDN_URL_JS}
+export CHS_URL=${CHS_URL}
