Updating suggested changes.

--- a/src/config/.env
+++ b/src/config/.env
@@ -22,8 +22,8 @@ export SHOW_SERVICE_OFFLINE_PAGE=false
 export URL_LOG_MAX_LENGTH=400
 export URL_PARAM_MAX_LENGTH=50
 export APP_NAME=psc-filing-web
-export NODE_PORT=8090
-export NODE_ENV=dev
+export NODE_PORT=${APPLICATIONS_DEVELOPER_WEB_PORT}
+export NODE_ENV=${NODE_ENV}
 export NUNJUCKS_LOADER_WATCH=false
 export NUNJUCKS_LOADER_NO_CACHE=true
 
