--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test": "mocha --recursive test/src/**/*.ts",
     "start": "npm run build && source ./dist/config/.env && node dist/server.js",
     "start:watch": "nodemon",
-    "debug-run": "NODE_ENV=development node -r ts-node/register/transpile-only --inspect=0.0.0.0 src/app.ts"
+    "debug-run": "NODE_ENV=development node -r ts-node/register/transpile-only --inspect=0.0.0.0 src/app.ts",
+    "sonarqube-base-branch": "sonar-scanner",
+    "sonarqube-pull-request": "sonar-scanner -D sonar.pullrequest.base=main",
+    "sonarqube": "branch=$(git rev-parse --symbolic-full-name --abbrev-ref HEAD); if [[ $branch == \"HEAD\" ]]; then echo $branch && npm run sonarqube-base-branch; else echo $branch && npm run sonarqube-pull-request; fi;"
   },
   "husky": {
     "hooks": {
@@ -90,6 +93,7 @@
     "sass": "^1.59.2",
     "sinon": "9.0.2",
     "sinon-chai": "3.5.0",
+    "sonarqube-scanner": "^3.0.1",
     "ts-node": "^8.10.1",
     "typescript": "4.9.5"
   },
