correct path in sonar.sources

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=uk.gov.companieshouse:psc-filing-web
 sonar.host.url=${env.CODE_ANALYSIS_HOST_URL}
 sonar.login=${env.CODE_ANALYSIS_LOGIN}
 sonar.password=${env.CODE_ANALYSIS_PASSWORD}
-sonar.sources=src,views
+sonar.sources=src
 
 sonar.projectName=psc-filing-web
 sonar.exclusions=**/bin/**, **/dist/**, **/coverage/**, **/node_modules/**
